# satan-attrd

./: .envrc  .gitignore  AGENTS.md  Cargo.toml  HANDOVER.md  Justfile  LINT-CLEANUP-HANDOFF.md  README.md  clippy.toml  flake.nix
.agents/: spec-driver-boot.md
.spec-driver/: workflow.toml
.spec-driver/deltas/DE-001-lint_cleanup_make_tree_green_under_pol_001_strict_clippy/: DE-001.md  DR-001.md  IP-001.md  notes.md
.spec-driver/deltas/DE-001-lint_cleanup_make_tree_green_under_pol_001_strict_clippy/phases/: phase-01.md
.spec-driver/memory/: mem.pattern.project.rust-lint-footguns.md
.spec-driver/policies/: POL-001-rust_lint_policy_for_agentic_development.md
.spec-driver/registry/: deltas.yaml  policies.yaml
migrations/: 0007_attributes.sql  0008_outcome_inbox.sql  0009_audit_inbox.sql  0010_audit_replies.sql  0011_attribute_decay.sql  0012_attribute_settings.sql
nix/: module.nix
src/: clock.rs  decay.rs  dispatcher.rs  error.rs  lib.rs  main.rs  migrate.rs  notify_stream.rs  pool.rs  rpc.rs  run_loop.rs  store.rs  tuning.rs  types.rs
tests/: decay.rs  dispatcher.rs  harness.rs  run_loop.rs  store.rs
tests/common/: mod.rs
