[package]
name = "satan-attrd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "SATAN attribute layer daemon — outcome-driven attribute state + event log"
license = "MIT"

[lib]
name = "satan_attrd"
path = "src/lib.rs"

[[bin]]
name = "satan-attrd"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono", "uuid", "migrate", "json"] }
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["test-util"] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
too_many_lines = "allow"
